hw02_kuber_start/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-status-app-deployment
spec:
  selector:
    matchLabels:
      app: status-app
  replicas: 3
  template:
    metadata:
      labels:
        app: status-app
    spec:
      containers:
      - name: status-app
        image: julinserg/health_service_docker_image:latest
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health/
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 3
