hw02_kuber_start/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-status-app-service
spec:
  selector:
    app: status-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
